# SX_AI

./: .gitignore  sdkconfig.defaults  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  audio_manager.cc  audio_manager.h  ble_adv.cc  ble_adv.h  bsp_board.cc  bsp_board.h  config_server.cc  config_server.h  device_id_manager.cc  device_id_manager.h  idf_component.yml  keyWeakUp.cc  keyWeakUp.h  main.cc  mqtt_config_client.cc  mqtt_config_client.h  power_control.cc  power_control.h  websocket_client.h  wifi_manager.cc  wifi_manager.h
main/mock_voices/: bye.h  connected.h  custom.h  end.h  hi.h  loseinter.h  newloseinter.h  newsuccess.h  newweekup.h  ok.h  searchinter.h  start.h  success.h  weekup.h
tools/: convert_audio.py
